@@ -1,0 +1,5 @@
+
+def getvar(name):
+	return repl[getvar]
+
+output += getvar
