@@ -1,0 +1,8 @@
+
+def isset(var):
+	if var in repl.keys():
+		return True
+	else:
+		return False
+
+output += isset
