@@ -1,0 +1,5 @@
+
+def w(s):
+	print(str(s))
+
+output += w
